# Atelier-Stereoscopie

./: CMakeLists.txt  Dockerfile  main.cpp
shaders/: fragment.glsl  vertex.glsl
